# poc_produtitas_flask

./: .env  .gitignore  Dockerfile  README.md  data_product.py  docker-compose.yml  pyproject.toml  server.py  settings.py  worker.py
core/: app.py  worker.py
core/models/: body_git.py
core/routes/: health.py  webhook.py
core/services/: api_github.py  publisher.py
core/tasks/: create_data_product.py  data_product.py
tasks/: __init__.py  data_product.py
